--- a/force-app/main/default/classes/ASF_Email2CaseHandler_Test.cls
+++ b/force-app/main/default/classes/ASF_Email2CaseHandler_Test.cls
@@ -2,7 +2,7 @@
  * @description       : 
  * @author            : rsinghnagar@salesforce.com
  * @group             : 
- * @last modified on  : 05-13-2024
+ * @last modified on  : 07-01-2024
  * @last modified by  : rsinghnagar@salesforce.com
  * Modifications Log
  * Ver   Date         Author                       Modification
@@ -28,9 +28,9 @@ public class ASF_Email2CaseHandler_Test {
         if(newCase.Id != null){
             EmailMessage eMsg = new EmailMessage();
             eMsg.ParentId = newCase.Id;
-            eMsg.ToAddress = 'abfl.grievancehead@adityabirlacapital.com';
-            eMsg.FromAddress = 'abfl.crmuat01@adityabirlacapital.com';
-            eMsg.CCAddress = 'abfl.instics@adityabirlacapital.com';
+            eMsg.ToAddress = 'abhfl.ceodesk@adityabirlacapital.com';
+            eMsg.FromAddress = 'abhfl.ceodesk@adityabirlacapital.com';
+            eMsg.CCAddress = 'abhfl.ceodesk@adityabirlacapital.com';
             eMsg.BCCAddress = 'test@test.com';
             eMsg.MessageIdentifier = 'ABC';
             eMsg.Incoming = true;
@@ -53,9 +53,9 @@ public class ASF_Email2CaseHandler_Test {
         if(newCase.Id != null){
             EmailMessage eMsg = new EmailMessage();
             eMsg.ParentId = newCase.Id;
-            eMsg.ToAddress = 'abfl.instics@adityabirlacapital.com';
-            eMsg.FromAddress = 'abfl.crmuat01@adityabirlacapital.com';
-            eMsg.CCAddress = 'abfl.grievancehead@adityabirlacapital.com';
+            eMsg.ToAddress = 'abhfl.ceodesk@adityabirlacapital.com';
+            eMsg.FromAddress = 'abhfl.ceodesk@adityabirlacapital.com';
+            eMsg.CCAddress = 'abhfl.ceodesk@adityabirlacapital.com';
             eMsg.BCCAddress = 'test@test.com';
             eMsg.MessageIdentifier = 'ABC';
             eMsg.Incoming = true;
