Viren's Litmus changes

--- a/force-app/main/default/classes/ABSLI_AfterUpdateLogic.cls
+++ b/force-app/main/default/classes/ABSLI_AfterUpdateLogic.cls
@@ -23,8 +23,8 @@ public with sharing class ABSLI_AfterUpdateLogic {
                 absliOldCasesMap.put(currentCase.Id,oldCasesMap.get(currentCase.Id));
             }
             if(currentCase.Business_Unit__c == ABSLI_Constants.BUSINESS_UNIT && 
-               currentCase.IsClosed == true && (oldCasesMap.get(currentCase.Id).IsClosed != true) 
-               && ASF_Constants.RESOLVEDSTAGES.contains(currentCase.Status))
+               ((currentCase.IsClosed == true && (oldCasesMap.get(currentCase.Id).IsClosed != true) 
+               && ASF_Constants.RESOLVEDSTAGES.contains(currentCase.Status)) || ASF_Constants.RESOLVEDSTAGES.contains(currentCase.Stage__c)))
             {
                 // THIS LOOP RUNS ADD CASES THOSE ARE RESOLVED AND ELIGIBLE FOR LITMUS CALLOUT.
                 litmusInvocableCases.put(currentCase.Id,currentCase);
@@ -74,25 +74,25 @@ public with sharing class ABSLI_AfterUpdateLogic {
                     ABSLI_Case_Detail__c absliCaseExtn = mCaseExtn.get(currentCase.ABSLI_Case_Detail__c);
                     System.debug('before trim: ' + absliCaseExtn.Resolution__c);
                     absliCaseExtn.Outcome__c = ASF_Constants.RESOLVEDSTAGES.contains(currentCase.Stage__c) ? ABSLI_Constants.RESOLVED_TEAM_RES_STATUS : (ASF_Constants.REJECTIONSTATUSES.contains(currentCase.Stage__c) ? ABSLI_Constants.UNRESOLVED_TEAM_RES_STATUS : '');
-                    if(mControlValVsDependentVal.containsKey(absliCaseExtn.Outcome__c)){
-                        String allResolutions = String.join(mControlValVsDependentVal.get(absliCaseExtn.Outcome__c), ';');
-                        System.debug('All Resolutions: ' + allResolutions);
-    
-                        if(allResolutions != null && allResolutions != '' && absliCaseExtn.Resolution__c != null && absliCaseExtn.Resolution__c != ''){
-                            List<String> resolutionValues = absliCaseExtn.Resolution__c.split(';');
-                            Boolean allValuesValid = true;
-                            for(String resolutionValue : resolutionValues){
-                                resolutionValue = resolutionValue.trim();
-                                if(!allResolutions.contains(resolutionValue)){
-                                    allValuesValid = false;
-                                    break;
+                        if(mControlValVsDependentVal.containsKey(absliCaseExtn.Outcome__c)){
+                            String allResolutions = String.join(mControlValVsDependentVal.get(absliCaseExtn.Outcome__c), ';');
+                            System.debug('All Resolutions: ' + allResolutions);
+                            
+                            if(allResolutions != null && allResolutions != '' && absliCaseExtn.Resolution__c != null && absliCaseExtn.Resolution__c != ''){
+                                List<String> resolutionValues = absliCaseExtn.Resolution__c.split(';');
+                                Boolean allValuesValid = true;
+                                for(String resolutionValue : resolutionValues){
+                                    resolutionValue = resolutionValue.trim();
+                                    if(!allResolutions.contains(resolutionValue)){
+                                        allValuesValid = false;
+                                        break;
+                                    }
+                                }
+                                if(!allValuesValid){
+                                    absliCaseExtn.Resolution__c = '';
                                 }
                             }
-                            if(!allValuesValid){
-                                absliCaseExtn.Resolution__c = '';
-                            }
                         }
-                	}
                     caseExtnList.add(absliCaseExtn);
                 }
             }
@@ -101,5 +101,5 @@ public with sharing class ABSLI_AfterUpdateLogic {
             }
         }
     }
-
+    
 }
