--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -151,33 +151,16 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                		GenFundResponseWrapper responseWrapper = (GenFundResponseWrapper)JSON.deserialize(genFundResponse.responseBody,GenFundResponseWrapper.class);
                     if(responseWrapper.BFID_RESPONSE.ProcessCode=='00'){
                         ABSLI_Case_Detail__c caseExt = new ABSLI_Case_Detail__c(Id=String.valueOf(jsonMap.get('ABSLI_Case_Detail__c')));
-                        if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PCPT033'){
-                         	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)){
-                                caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE);
-                            }else{
-                                return 'Maximum loan amount should be more than 0.';
-                            }
-                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)){
-                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT);    
-                            }else{
-                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
-                            }   
-                        }/*else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY008'){
-                           	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)){
-                                caseExt.Minimum_Withdrawal_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT);
-                            }
-                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)){
-                                caseExt.Withdrawal_Amount_Available__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE);    
-                            }else{
-                                return 'Withdrawal amount available should be more than 0.';
-                            } 
-                        }else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY001'){
-                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)){
-                                caseExt.Cash_Surrender_Value__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE);
-                            }else{
-                                return 'Case Surrender Value should be more than 0.';
-                            }
-                        }*/
+                        if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)>0 || !String.isBlank(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)){
+                            caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE);
+                        }else{
+                            return 'Maximum loan amount not specified.';
+                        }
+                        if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)>0 || !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)){
+                        	caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT);    
+                        }else{
+                            caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
+                        }
                         update caseExt;
                     	return 'Success';    
                     }else{
@@ -432,16 +415,48 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     }
     
     public class GenFundResponseWrapper{
+        public List<AllocationDetails> ALLOCATION_DETAILS{get;set;}
         public BfidResponse BFID_RESPONSE{get;set;}
+        public List<FundDetails> FUND_DETAILS{get;set;}
+    }
+    
+    public class AllocationDetails{
+        public String ALLOCATION_TYPE{get;set;}
+        public String DEST_FND_ID{get;set;}
+        public String POL_ID{get;set;}
+        public String ALLOCATION_PCT{get;set;}
     }
     
     public class BfidResponse{
+        //public String MORE-MESSAGES-IND{get;set;}
         public String MINIMUM_WITHDRAWAL_AMT{get;set;}
         public String ProcessCode{get;set;}
+        public String POLICY_BILLED_TO_DATE{get;set;}
         public String MINIMUM_LOAN_AMT{get;set;}
+        public String CSV_PAYABLE_HOLD_AMOUNT{get;set;}
+        public String POLICY_BILL_MODE{get;set;}
+        public String FUND_DETAILS{get;set;}
         public String WITHDRAWL_AMOUNT_AVAILABLE{get;set;}
+        public String navdate{get;set;}
+        //public String MESSAGES-T{get;set;}
+        public String LOAN_AMOUNT_AVAILED{get;set;}
+        public String MESSAGES{get;set;}
+        public String ProcessMessage{get;set;}
+        //public String MESSAGES-T_1{get;set;}
         public String CASH_SURRENDER_VALUE{get;set;}
         public String MAX_LOAD_AMOUNT_AVAILABLE{get;set;}
+        public String POLICY_SA{get;set;}
+        public String TOTAL_FUND_VALUE{get;set;}
+    }
+    
+    public class FundDetails{
+        public String FND_ID{get;set;}
+        public String TOT_UNITS{get;set;}
+        public String NAV{get;set;}
+        public String POL_CSTAT_CD{get;set;}
+        public String FUND_NAME{get;set;}
+        public String POL_ID{get;set;}
+        public String FUND_VALUE{get;set;}
     }
 
 }
